# assimilation-official

./: .gitignore  .hgignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dependencies.md  Doxyfile  Doxyfile.in  README  README.md  meson.build
.github/workflows/: main.yml
best_practices/: auditd_conf.json  auditd_fileattrs.json  login_defs.json  pam.json  proc_sys.json  sshd.json  sysfile_fileattrs.json
buildtools/: IEEE.out.txt  assimDnI  boilerplate.c  boilerplate.py  boilerplate.sh  check.licenses.sh  checkandput  checkheaders  cma  demo  determinelibdir.py  floats1.diff  floats2.diff  genpybindings.py  install-path.py  installme  libsodium.mkdeb.sh  lintme.sh  long_license.txt  nanoprobe  patch_ctypesgen.py  preprelease  select-cpack.py  short_description.txt  vimrc
buildtools/ci/: install_neo4j
buildtools/debian/: postinst.in  postrm.in
ci/: bintray.json  install_libsodium  install_neo4j
ci/Dockerfiles/: centos7.dockerfile  centos7_fpm.dockerfile  cma.dockerfile  nanoprobe.dockerfile  ubuntu1804.dockerfile  ubuntu1804_fpm.dockerfile
ci/scripts/: attach_asset.sh  fix.sh  run_tests.sh
clientlib/: CMakeLists.txt  addrframe.c  arpdiscovery.c  assimobj.c  authlistener.c  cdp_min.c  childprocess.c  cmalib.c  compressframe.c  configcontext.c  cryptcurve25519.c  cryptframe.c  cstringframe.c  decode_packet.c  discovery.c  frame.c  frameset.c  fsprotocol.c  fsqueue.c  generic_tlv_min.c  gmainfd.c  hblistener.c  hbreqlistener.c  hbsender.c  intframe.c  ipportframe.c  jsondiscovery.c  listener.c  lldp_min.c  logsourcefd.c  misc.c  nanoprobe.c  netaddr.c  netgsource.c  netio.c  netioudp.c  nvpairframe.c  packetdecoder.c  pcap_GSource.c  pcap_min.c  (+13 more)
cma/: AssimCclasses.py  AssimCtypes.py  CMakeLists.txt  README.md  __init__.py  arpdiscovery.py  assim_secrets.py  assimcli.in  assimcli.py  assimevent.py  assimeventobserver.py  assimglib.py  assimjson.py  bestpractices.py  checksumdiscovery.py  cma.in  cma.py  cmaconfig.py  cmadb.py  cmainit.py  consts.py  discoverylistener.py  dispatchtarget.py  drawwithdot.in  drawwithdot.py  droneinfo.py  frameinfo.py  glib.py  graphnodeexpression.py  graphnodes.py  hbring.py  invariant_data.py  linkdiscovery.py  messagedispatcher.py  min-requirements.txt  monitoring.py  monitoringdiscovery.py  neo4j.py  newcma.py  obsolete_cma.py  (+14 more)
cma/detrius/: testpy2neo.py
cma/flask/: hello.py
cma/systemtests/: README.md  assimtest.py  docker.py  logwatcher.py  querytest.py  runtests.sh  sysmgmt.py  testcases.py
cma/systemtests/vagrant/: Vagrantfile  common  configure_cma  install_cma  install_nanoprobe  mksshconf.sh
cma/tests/: __init__.py  assimevent_test.py  cclass_wrappers_test.py  cma_test.py  pcap_test.py  store_test.py  zexternal_test.py  zexternaltests.py
discovery_agents/: arpcache  assim_common.sh  auditd_conf  checksums  commands  cpu  docker  fileattrs  findmnt  listeningports  login_defs  mdadm  monitoringagents  netconfig  nsswitch  os  packages  pam  partitions  passwd  proc_sys  sshd  sudoers  tcpclients  tcpdiscovery  tcplisteners  ulimit  upstart
docfiles/: API.c  AutoConfigureStrategy.c  CMAArch.c  CMAArch.c.bak  ClientArch.c  CodingStandards.c  DesignDecisions.c  Download.c  DoxygenLayout.xml  GettingStarted.c  InfrastructureArch.c  MainPage.c  ManualTestPlan.c  Misc.c  Releases.c  SystemArchitecture.c  SystemGoals.c  header.html
docker/: Dockerfile  README  builditall  getsigningkey.py  hashes.csv
docker/CentOS/: CentOS6-directions  Dockerfile  assimilation-cma.spec  assimilation-nanoprobe.service  dockit  dockit.out
docker/CentOS6/: CentOS6-directions  assimilation-cma.service  assimilation-cma.spec  dockit
docker/Debian/: Dockerfile  cmaDockerfile  dockit  nanoDockerfile
docker/Fedora/: Dockerfile  dockit
docker/rel2/nanoprobe/: docker-tag.txt  dockerfile.in  dockit  meson.build
include/: CMakeLists.txt  address_family_numbers.h  addrframe.h  arpdiscovery.h  assimobj.h  authlistener.h  cdp.h  childprocess.h  cmalib.h  compressframe.h  configcontext.h  cryptcurve25519.h  cryptframe.h  cstringframe.h  decode_packet.h  discovery.h  frame.h  frameformats.h  frameset.h  fsprotocol.h  fsqueue.h  generic_tlv_min.h  gmainfd.h  hblistener.h  hbreqlistener.h  hbsender.h  intframe.h  ipportframe.h  jsondiscovery.h  listener.h  lldp.h  logsourcefd.h  misc.h  nanoprobe.h  netaddr.h  netgsource.h  netio.h  netioudp.h  nvpairframe.h  packetdecoder.h  (+18 more)
legal/: copyright
nanoprobe/: CMakeLists.txt  nanomain.c  nanoprobe.c
ocf/: neo4j
pcap/: cdp-BCM1100.pcap  cdp_v2_hdlc.pcap  cdp_v2_voice.pcap  n0.eth2.cdp-2.pcap  n0.eth2.cdp.pcap  oui.txt  procurve.lldp.pcap  shortoui.txt
pyclasswrappers/: AssimCclasses.py  AssimCtypes.py  CMakeLists.txt  frameinfo.py
queries/: CrashedDrones  DownDrones  FindIPOwners  FindMACOwners  FindUnonwnedIPs  GetAQuery  GetAllClassNodes  GetAllQueries  GetClassRoot  GetRingMembers  GetRootNode  GetaNodeById  ListDrones  ListIPs  ShutdownDrones  SwitchConnections  allhostscores  allhostsubgraph  allipports  allips  allrulescores  allservernetscores  allservers  allserversecscores  allservicestatus  allswitchports  crashed  down  downservices  findip  findmac  hostdependencies  hostipports  hostservicestatus  hostsubgraph  hostswitchports  list  nodecount  nodns  nooui  (+6 more)
samples.d/: README.md
serverlib/: CMakeLists.txt  cdp.c  dump.c  lldp.c
systemtests/: docker.py  logwatcher.py  querytest.py
testcode/: CMakeLists.txt  fence  filetest.ref.txt  frameinfo.py  grind.sh  grindping.sh  gtest01.c  gtest02.c  leam_test_discovery.sh  mainloop.ref.txt  pcap+mainloop.c  pcap_test.c  pinger-msgs.supp  pinger.c  test_discovery  test_discovery.sh  testscript.sh  valgrind-msgs.supp
testcode/discovery_input/: auditd.conf  findmnt  mdadm  partitions  passwd  sudoers
testcode/discovery_input/pam/: accountsservice  atd  common-password  common-session  polkit-1  ppp  samba  systemd-user
testcode/discovery_output/: auditd_conf  findmnt  login_defs  mdadm  nsswitch  pam  partitions  passwd  sshd  sudoers
tests/: __init__.py  alltests.py  cclass_wrappers_test.py  cma_test.py
tmp/: leam_notes.txt
(+101 files in other folders)
